After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755759 - assrender: leaks gap events and sample in tags
assrender: leaks gap events and sample in tags
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-28 19:48 UTC by Arnaud Vrac
Modified: 2015-09-29 09:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
assrender: fix gap event leak and invalid return value (850 bytes, patch)
2015-09-28 19:48 UTC, Arnaud Vrac
committed Details | Review
fix leak of tag samples in the tag list (4.60 KB, patch)
2015-09-28 19:48 UTC, Arnaud Vrac
committed Details | Review

Description Arnaud Vrac 2015-09-28 19:48:28 UTC
Created attachment 312323 [details] [review]
assrender: fix gap event leak and invalid return value

Here are some patches to fix leaks spotted by valgrind. The return value was also not set to TRUE when handling GAP events, so the event was forwarded when it should not.
Comment 1 Arnaud Vrac 2015-09-28 19:48:50 UTC
Created attachment 312324 [details] [review]
fix leak of tag samples in the tag list
Comment 2 Tim-Philipp Müller 2015-09-29 09:01:02 UTC
Comment on attachment 312323 [details] [review]
assrender: fix gap event leak and invalid return value

commit 5d0db38df3961a49591481f01b44b58acc85ac7c
Author: Arnaud Vrac <avrac@freebox.fr>
Date:   Mon Sep 28 20:56:56 2015 +0200

    assrender: fix leak of tag samples in the tag list
    
    Move handling of a GstSample in a separate function, and unref the
    sample after calling it. libass copies the font data so we don't need to
    keep it around.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755759

commit c6ce769a18da78025837a4d9db2532be364e8efb
Author: Arnaud Vrac <avrac@freebox.fr>
Date:   Mon Sep 28 20:30:17 2015 +0200

    assrender: fix gap event leak and invalid return value
    
    We don't want the gap event to be forwarded
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755759