assrender: fix gap event leak and invalid return value

We don't want the gap event to be forwarded

https://bugzilla.gnome.org/show_bug.cgi?id=755759